# mlops2025_Abed_Gianni

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: features.ipynb  preprocess.ipynb
scripts/: batch_inference.py  feature_engineering.py  preprocess.py  run_batch_inference_pipeline.py  run_training_pipeline.py  train.py  train_sagemaker.py
src/mlproject/features/: basic_features.py
src/mlproject/inference/: runner.py
src/mlproject/preprocess/: filters.py
src/mlproject/train/: trainer.py
